# releasor2000

./: Cargo.toml  README.md  flake.nix  releasor2000.toml
src/: channels.rs  config.rs  main.rs
