[package]
name = "releasor2000"
version = "0.0.6"
edition = "2024"
description = "Release your bin everywhere*."
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
serde_json = "1"
base64 = "0.22"
